; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/7zip/extr_7zStream.c_SeqInStream_Readuint8_t.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/7zip/extr_7zStream.c_SeqInStream_Readuint8_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (%struct.TYPE_4__*, i32*, i64*)* }

@SZ_OK = common dso_local global i32 0, align 4
@SZ_ERROR_INPUT_EOF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SeqInStream_Readuint8_t(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i64 1, i64* %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32 (%struct.TYPE_4__*, i32*, i64*)*, i32 (%struct.TYPE_4__*, i32*, i64*)** %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 %8(%struct.TYPE_4__* %9, i32* %10, i64* %5)
  %12 = call i32 @RINOK(i32 %11)
  %13 = load i64, i64* %5, align 8
  %14 = icmp eq i64 %13, 1
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @SZ_OK, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @SZ_ERROR_INPUT_EOF, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i32 [ %16, %15 ], [ %18, %17 ]
  ret i32 %20
}

declare dso_local i32 @RINOK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
